--- a/styles/slide.scss
+++ b/styles/slide.scss
@@ -3,20 +3,15 @@
     display: none;
   }
   .slide_1 {
-    background-image: url(./../components//assets/img/accueil_picture.jpg);
+    .image {
+      position: relative;
+      display: flex;
+      align-items: flex-start;
+    }
   }
-  .slide_2 {
-    background-image: url(./../components//assets//img/technician-holding-solar-cell-eco-icon-solar-cell-system-min.jpg);
-  }
-  .slide_3 {
-    background-image: url(../components/assets/img/future-building.jpg);
-  }
+
   .slideAll {
-    background-size: cover;
-    background-position: bottom;
     width: 100%;
-    height: 570px;
-    position: relative;
   }
   .slider-text {
     max-width: 500px;
@@ -24,12 +19,15 @@
     left: 20%;
     z-index: 10;
     margin: 30px;
+    top: 0;
+
     h1 {
-      font-size: 61px;
+      font-size: clamp(10px, 4vw, 60px);
       color: #41464b;
     }
     h3 {
       margin: 15px 0;
+      font-size: clamp(5px, 3vw, 28px);
     }
     button {
       margin: 12px 0;
@@ -39,17 +37,16 @@
 @media screen and (max-width: 646px) {
   .slide {
     .slideAll {
-      height: 400px;
     }
     .slider-text {
       left: 10%;
       margin: 10px;
-      h1 {
-        font-size: 10vw;
-      }
-      h2 {
-        font-size: 5vw;
-      }
+      // h1 {
+      //   font-size: 5vw;
+      // }
+      // h2 {
+      //   font-size: 1vw;
+      // }
       button {
         font-size: 3.4vw;
       }
