--- a/styles/Actualités.scss
+++ b/styles/Actualités.scss
@@ -97,6 +97,25 @@
     .Actualites-contant {
       width: 248px !important;
       height: 409px;
+      .info {
+        font-size: 12px;
+        position: absolute;
+        display: flex;
+        justify-content: unset;
+        width: 100%;
+        bottom: 1%;
+        color: #4a4848;
+        gap: 20px;
+        a {
+          font-size: 15px;
+        }
+        .date {
+          align-items: center;
+          svg {
+            width: 17px;
+          }
+        }
+      }
     }
     .rec-arrow {
       display: none;
