--- a/styles/Coordonnées.scss
+++ b/styles/Coordonnées.scss
@@ -10,23 +10,26 @@
   border-radius: 10px;
   font-size: 17px;
   transform: translateY(35%);
-  svg {
-    width: 60px;
-    margin: 12px;
-  }
+
   .coordonnée {
     display: flex;
     flex-direction: row;
-    text-align: center;
+
     justify-content: center;
     margin: 10px;
+    // p {
+    //   font-size: small;
+    // }
     img {
-      width: 68px;
+      width: 60px;
+      height: 60px;
+      margin-right: 12px;
     }
     .donnée {
       display: flex;
       flex-direction: column;
       justify-content: center;
+      font-size: 15px !important;
       h4 {
         margin-bottom: 10px !important;
       }
@@ -36,22 +39,9 @@
 @media screen and (max-width: 914px) {
   .coordonnées {
     display: block;
-    background-color: white;
-    position: relative;
-    /* justify-content: space-around; */
-    z-index: 10;
-    box-shadow: 13px 8px 16px 0px rgb(0 0 0 / 73%);
     max-width: 511px;
-    margin: auto;
-    border-radius: 10px;
-    font-size: 17px;
-    transform: translateY(35%);
     .coordonnée {
-      display: flex;
-      flex-direction: row;
-      text-align: center;
       justify-content: flex-start;
-      margin: 10px;
     }
   }
 }
