--- a/styles/Devis.scss
+++ b/styles/Devis.scss
@@ -27,8 +27,7 @@
       margin-top: 40px;
       padding-left: 10%;
       h3 {
-        font-size: 50px;
-        line-height: 61px;
+        font-size: clamp(14px, 8vw, 44px) !important;
       }
       p {
         font-size: 22px;
@@ -98,7 +97,7 @@
   background-repeat: no-repeat;
   background-position-x: left;
 }
-@media screen and (max-width: 638px) {
+@media screen and (max-width: 991px) {
   .Devis {
     clip-path: none;
     height: max-content;
@@ -115,6 +114,9 @@
         padding: 0 50px;
         margin-top: 40px;
         padding-left: 10%;
+        p {
+          max-width: 100%;
+        }
       }
       .form {
         width: 100%;
