--- a/styles/Header.scss
+++ b/styles/Header.scss
@@ -5,21 +5,39 @@
     padding: 0 !important;
   }
 }
-
+.header {
+  position: fixed;
+  top: 0;
+  z-index: 20;
+  overflow: hidden;
+  transition: 0.5s;
+  left: 0;
+  right: 0;
+}
+.fixed {
+  width: 100%;
+  background-color: #fff;
+}
 .header-nav {
   width: 100%;
   justify-content: center;
   background-color: var(--clr-primary);
   align-items: center;
-  height: 80px;
+  height: 60px;
   display: flex;
-
+  z-index: 20;
+  position: sticky;
+  top: 0;
+  .active {
+    background: #ffffff36;
+    border-radius: 37px;
+  }
   a {
     font-size: 17px;
     text-decoration: none;
     margin: 5px;
     color: #ffffff;
-    padding: 9px 18px;
+    padding: 9px 14px;
     text-align: center;
   }
   a:hover {
@@ -53,7 +71,7 @@
 }
 
 .header-top {
-  padding: 15px 0px;
+  padding: 0px 0px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -61,12 +79,13 @@
   text-align: center;
   max-width: 1100px;
   margin: auto;
-  // .background::after {
-  //   content: '';
-  //   background-image: url('../../assets/img/background.jpg');
-  // }
+  background-color: white;
+  width: 100% !important;
+  height: 85px;
+
   a {
     width: 150px;
+    display: flex;
   }
   .contact {
     display: flex;
@@ -77,13 +96,14 @@
       align-items: center;
       p {
         margin-left: 10px;
+        font-size: 15px;
       }
     }
 
     .social {
       gap: 10px;
       .search {
-        width: 32px;
+        width: 29px;
       }
     }
   }
@@ -113,7 +133,9 @@
     border-radius: 37px;
   }
 }
-
+.hide_nav {
+  margin-top: -85px;
+}
 @media screen and (max-width: 1015px) {
   .header-nav a {
     padding: 9px 13px;
@@ -137,5 +159,10 @@
 @media screen and (max-width: 650px) {
   .responsive {
     padding: 30px !important;
+  }
+}
+@media screen and (max-width: 935px) {
+  .hide_nav {
+    margin-top: 0px;
   }
 }
