--- a/styles/index.scss
+++ b/styles/index.scss
@@ -25,11 +25,14 @@ h4 {
   display: flex;
   align-items: center;
 }
+#__next {
+  margin-top: 145px;
+}
 p {
   font-size: 20px;
 }
 section {
-  padding: 50px 0;
+  padding: 50px 15px;
 }
 img {
   pointer-events: none !important;
@@ -58,7 +61,7 @@ button:active {
 .second-btn {
   background-color: var(--clr-second);
   color: white;
-  font-size: clamp(5px, 3vw, 22px);
+  font-size: clamp(14px, 4vw, 22px);
   padding: 10px 20px;
   border-radius: 10px;
   text-align: center;
@@ -113,14 +116,18 @@ button:active {
 //     font-size: 40px;
 //   }
 // }
-._container {
-  padding: 25px 0;
-}
+// ._container {
+//   padding: 25px 0;
+// }
 .rec-dot_active {
   background-color: var(--clr-primary) !important;
   box-shadow: 0 0 1px 3px var(--clr-primary) !important;
 }
-
+@media screen and (max-width: 935px) {
+  #__next {
+    margin-top: 60px;
+  }
+}
 @media screen and (max-width: 425px) {
   // h2 {
   //   font-size: 30px !important;
