--- a/styles/slide.scss
+++ b/styles/slide.scss
@@ -1,6 +1,8 @@
 .carousel {
-  clip-path: ellipse(96% 100% at 50% 0%);
+  -webkit-clip-path: ellipse(96% 100% at 50% 0%);
+  clip-path: ellipse(104% 92% at 50% 0%);
 }
+
 .carousel-slider {
   width: 100%;
   height: 600px;
@@ -17,7 +19,7 @@
     max-width: 1000px;
     width: 100%;
     h1 {
-      font-size: 55px;
+      font-size: clamp(14px, 7vw, 70px) !important;
       font-weight: 700;
       color: #41464b;
       margin-bottom: 15px !important;
@@ -70,7 +72,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 15px;
+      font-size: 13px;
     }
   }
 }
