--- a/styles/Domaine.scss
+++ b/styles/Domaine.scss
@@ -1,10 +1,8 @@
 .domaine {
   display: flex !important;
-  width: 350px !important;
-  height: 550px;
+  width: 100% !important;
   position: relative;
   flex-direction: column !important;
-  box-shadow: 14px 8px 16px 0px rgba(0, 0, 0, 0.2) !important;
   border-radius: 15px !important;
   margin-bottom: 30px;
   height: 586px;
@@ -22,7 +20,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 55%;
     height: 40px;
     position: absolute;
     bottom: 20px;
@@ -37,7 +34,6 @@
     overflow: hidden;
     text-overflow: ellipsis;
     li {
-      margin: 9px 0;
       list-style: circle;
     }
   }
