--- a/styles/Expertise.scss
+++ b/styles/Expertise.scss
@@ -1,12 +1,10 @@
 .expertise_container {
   overflow: hidden;
   .container_expertise {
-    display: flex;
+ 
     align-items: center;
-    flex-direction: row;
-    gap: 100px;
+ 
     .images {
-      width: 50%;
       position: relative;
       height: fit-content;
       .bg {
@@ -77,7 +75,7 @@
     }
 
     .expertise {
-      width: 50%;
+      padding-left: 30px;
     }
     .discreption {
       .title {
@@ -101,11 +99,14 @@
 
       .type {
         display: flex;
-        margin: 20px 0;
+      margin-top: 15px;
         align-items: center;
         .svg-content {
           text-align: center;
           width: 100px;
+        }
+        h3{
+          font-size: 22px;
         }
 
         .définition {
@@ -147,20 +148,7 @@
   }
 }
 @media screen and (max-width: 1199px) {
-  .expertise_container {
-    .container_expertise {
-      align-items: center;
-      .images {
-        width: 100% !important;
-      }
-      .expertise {
-        width: 100%;
-        margin-top: 50px;
-        display: flex;
-        flex-direction: column;
-      }
-    }
-  }
+  
 }
 @media screen and (max-width: 638px) {
   .container_expertise {
