--- a/styles/index.scss
+++ b/styles/index.scss
@@ -193,9 +193,12 @@ iframe{
   box-shadow: 0 0 1px 3px var(--clr-primary) !important;
 }
 
-@media screen and (max-width: 935px) {
+
+@media screen and (max-width: 1100px) {
   .container {
     max-width: 900px !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
   }
 
   #__next {
