--- a/styles/slide.scss
+++ b/styles/slide.scss
@@ -37,6 +37,10 @@
   width: 100%;
   background-image: url('../public/img/future-building-construction-engineering-project.webp');
 }
+.slider-0 {
+  width: 100%;
+  background-image: url('/img/sliders/slider-1.jpg');
+}
 .carousel-control-next-icon,
 .carousel-control-prev-icon {
   background-color: #65676a;
