--- a/styles/Expertise.scss
+++ b/styles/Expertise.scss
@@ -7,33 +7,37 @@
     .images {
       position: relative;
       height: fit-content;
-      .bg {
+
+      .img-roue{
         position: absolute;
+    left: 0;
+    height: 120%;
+  
+    transform: translateX(-50%);
+    top: -10%;
+    -webkit-animation-name: spin;
+    -webkit-animation-duration: 4000ms;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    -moz-animation-name: spin;
+    -moz-animation-duration: 4000ms;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
+    -ms-animation-name: spin;
+    -ms-animation-duration: 4000ms;
+    -ms-animation-iteration-count: infinite;
+    -ms-animation-timing-function: linear;
 
-        left: 0;
-        top: -7%;
-        transform: translateY(-50%);
-        -webkit-animation-name: spin;
-        -webkit-animation-duration: 4000ms;
-        -webkit-animation-iteration-count: infinite;
-        -webkit-animation-timing-function: linear;
-        -moz-animation-name: spin;
-        -moz-animation-duration: 4000ms;
-        -moz-animation-iteration-count: infinite;
-        -moz-animation-timing-function: linear;
-        -ms-animation-name: spin;
-        -ms-animation-duration: 4000ms;
-        -ms-animation-iteration-count: infinite;
-        -ms-animation-timing-function: linear;
-
-        animation-name: spin;
-        animation-duration: 50000ms;
-        animation-iteration-count: infinite;
-        animation-timing-function: linear;
-        img {
-          height: auto;
-        }
-        width: 100%;
+    animation-name: spin;
+    animation-duration: 50000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+      
+      .animation {
+       
+    
+        
       }
       // .updown {
       //   display: flex;
