--- a/styles/ImgComarison.scss
+++ b/styles/ImgComarison.scss
@@ -1,5 +1,4 @@
 .allcomparision {
-  background-color: rgba(221, 224, 229, 0.2);
   width: 100%;
   padding: 50px 0;
   text-align: center;
@@ -26,6 +25,16 @@
   a:hover {
     color: var(--clr-second) !important;
   }
+}
+.title-ref{
+  display: flex;
+    justify-content: center;
+    margin-top: 5px;
+    font-weight: 500;
+    cursor: pointer;
+}
+.title-ref:hover{
+ text-decoration: underline;
 }
 
 @media screen and (max-width: 786px) {
