--- a/styles/Header.scss
+++ b/styles/Header.scss
@@ -128,6 +128,18 @@
   }
 }
 
+.search-boxSideBar {
+  input {
+    width: 100%;
+    margin-bottom: 20px;
+    height: 40px;
+    padding: 0 20px;
+    border-radius: 20px;
+    border: 0;
+    outline: none;
+  }
+}
+
 .sidebar-items {
   display: flex;
   flex-direction: column;
@@ -139,6 +151,8 @@
     color: #ffffff;
     padding: 9px 18px;
     text-align: center;
+    height: max-content;
+    margin: auto;
   }
   a:hover {
     color: #d7d7d7;
@@ -167,6 +181,7 @@
     box-shadow: 2px 2px 10px 4px rgb(14 55 54 / 15%);
   }
 }
+
 @media screen and (max-width: 1015px) {
   .header-nav a {
     padding: 9px 13px;
@@ -175,6 +190,14 @@
 @media screen and (max-width: 935px) {
   .navbar-items {
     display: none;
+  }
+  .header-nav {
+    .btn__search {
+      display: none !important;
+    }
+    .search-box {
+      display: none !important;
+    }
   }
   .header-top {
     display: none;
