--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,7 +5,17 @@
   src: local('nexa_bold'),
     url(./../components//assets/font/Nexa-Bold.woff) format('woff');
 }
-
+// .background {
+//   background-image: url('/img/backgroud.webp');
+//   position: fixed;
+//   left: 0;
+//   right: 0;
+//   top: 0;
+//   bottom: 0;
+//   background-size: cover;
+//   z-index: 0;
+//   opacity: 0.1;
+// }
 :root {
   --clr-second: #bb2431;
   --clr-primary: #1c2c4e;
@@ -21,11 +31,20 @@ body {
   // overflow: overlay;
   font-family: 'Montserrat', sans-serif !important;
 }
-
+.row {
+  align-items: center;
+}
 .grey {
   background: #f5f5f5;
 }
-
+.back_icon {
+  position: absolute;
+  /* width: 100%; */
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0.15;
+}
 p,
 h1,
 h2,
@@ -57,6 +76,7 @@ p {
 
 section {
   padding: 50px 20px !important;
+  position: relative;
 }
 
 img {
@@ -158,11 +178,10 @@ iframe {
   width: 100%;
 }
 
-.igs {
-  margin-top: -20px;
-}
-
 ._icons {
+  .back_icon {
+    width: 900px;
+  }
   .icon {
     cursor: pointer;
     transition: 0.3s;
@@ -191,54 +210,54 @@ iframe {
     filter: opacity(0.7);
     transform: scale(1);
   }
-  .icon:first-child {
-    .icons-expertise {
-      background: linear-gradient(
-        90deg,
-        rgba(28, 44, 78, 1) 0%,
-        rgba(52, 82, 145, 1) 100%
-      );
-    }
-  }
-  .icon:nth-child(2n) {
-    .icons-expertise {
-      background: linear-gradient(
-        90deg,
-        rgba(227, 228, 41, 1) 0%,
-        rgba(145, 127, 52, 1) 100%
-      );
-    }
-  }
-  .icon:nth-child(3n) {
-    .icons-expertise {
-      background: linear-gradient(
-        90deg,
-        rgba(101, 101, 101, 1) 0%,
-        rgba(91, 91, 91, 1) 100%
-      );
 
-      padding: 30px;
-    }
+  .gestion {
+    background: linear-gradient(
+      90deg,
+      rgba(28, 44, 78, 1) 0%,
+      rgba(52, 82, 145, 1) 100%
+    );
   }
-  .icon:nth-child(4n) {
-    .icons-expertise {
-      background: linear-gradient(
-        90deg,
-        rgba(3, 186, 212, 1) 0%,
-        rgba(3, 109, 226, 1) 100%
-      );
 
-      padding-top: 30px;
-    }
+  .elec {
+    background: linear-gradient(
+      90deg,
+      rgba(227, 228, 41, 1) 0%,
+      rgba(145, 127, 52, 1) 100%
+    );
   }
-  .icon:nth-child(5n) {
-    .icons-expertise {
-      background: linear-gradient(
-        90deg,
-        rgba(12, 102, 0, 1) 0%,
-        rgba(52, 226, 3, 1) 100%
-      );
-    }
+
+  .str {
+    padding: 30px;
+    background: linear-gradient(
+      90deg,
+      rgba(101, 101, 101, 1) 0%,
+      rgba(91, 91, 91, 1) 100%
+    );
+  }
+
+  .fluide {
+    background: linear-gradient(
+      90deg,
+      rgba(3, 186, 212, 1) 0%,
+      rgba(3, 109, 226, 1) 100%
+    );
+  }
+
+  .therm {
+    background: linear-gradient(
+      90deg,
+      rgba(232, 82, 45, 1) 0%,
+      rgba(240, 111, 86, 0.9948354341736695) 100%
+    );
+  }
+
+  .vrd {
+    background: linear-gradient(
+      90deg,
+      rgba(12, 102, 0, 1) 0%,
+      rgba(52, 226, 3, 1) 100%
+    );
   }
 }
 
