--- a/styles/slide.scss
+++ b/styles/slide.scss
@@ -11,9 +11,11 @@
   background-position: center;
   display: flex !important;
   align-items: center;
-  padding: 0 15%;
   justify-content: center;
-
+  padding: 0 15%;
+  button {
+    margin-top: 15px !important;
+  }
   .slider-text {
     margin-top: -140px;
     max-width: 1000px;
@@ -27,9 +29,6 @@
     h2 {
       font-weight: 600;
       color: #323232;
-    }
-    button {
-      margin-top: 15px !important;
     }
   }
 }
@@ -48,6 +47,7 @@
   height: 3rem !important;
   border-radius: 50%;
   background-size: 50% !important;
+  transform: translateY(-44px);
 }
 .slider-2 {
   background-image: url('../public/img/technician-holding-solar-cell-eco-icon-solar-cell-system-min-min\ \(2\).webp');
