--- a/styles/Actualités.scss
+++ b/styles/Actualités.scss
@@ -50,6 +50,7 @@
       a {
         text-decoration: none;
         color: var(--clr-primary);
+        cursor: pointer;
       }
       a:hover {
         color: var(--clr-second);
