--- a/styles/Domaine.scss
+++ b/styles/Domaine.scss
@@ -1,4 +1,4 @@
-.domaine {
+.domaines {
   .back_icon {
     width: 1200px !important;
   }
@@ -77,6 +77,9 @@
       margin: 40px 5px 0 0;
     }
   }
+}
+.domaine {
+  min-height: 400px;
 }
 
 @media screen and (max-width: 1012px) {
