--- a/styles/Partner.scss
+++ b/styles/Partner.scss
@@ -18,7 +18,7 @@
     transform: translateX(calc(-250px * 7));
   }
 }
-.slider {
+.slider_partner {
   background: pr;
   display: flex;
 
@@ -27,30 +27,30 @@
   overflow: hidden;
   position: relative;
 }
-.slider::before,
-.slider::after {
+.slider_partner::before,
+.slider_partner::after {
   content: '';
 
   position: absolute;
 
   z-index: 2;
 }
-.slider::after {
+.slider_partner::after {
   right: 0;
   top: 0;
   -webkit-transform: rotateZ(180deg);
   transform: rotateZ(180deg);
 }
-.slider::before {
+.slider_partner::before {
   left: 0;
   top: 0;
 }
-.slider .slide-track {
+.slider_partner .slide-track {
   -webkit-animation: scroll 40s linear infinite;
   animation: scroll 40s linear infinite;
   display: flex;
 }
-.slider .slide {
+.slider_partner .slide {
   position: relative;
   height: 250px;
   width: 250px;
